# CoD-Multiplayer-FromScratch.

./: .clang-format  .clangd  CMakeLists.txt  README.md  network_sim.sh
lib/: glad.c  glad.h
src/: ai.cpp  ai.hpp  client.cpp  client.hpp  client_extended.hpp  containers.hpp  game_types.hpp  lock_free_queue.hpp  main.cpp  map.cpp  map.hpp  math.cpp  math.hpp  network_client.cpp  network_client.hpp  physics.cpp  physics.hpp  profiler.cpp  profiler.hpp  quantization.cpp  quantization.hpp  renderer.cpp  renderer.hpp  server.cpp  server_extended.hpp  time.hpp  udp_socket.hpp  window.cpp  window.hpp
